@@ -961,15 +961,15 @@ session and relies on functions in that package not being masked by
 other @code{require} or @code{library} calls.  It is better practice to
 use code like
 @example
-   if (requireNamespace("rgl")) @{
-      if (display=="persp") rgl::scatterplot3d(...) else rgl::plot3d(...)
+   if (requireNamespace("rgl", quietly = TRUE)) @{
+      rgl::plot3d(...)
    @} else @{
       ## do something else not involving rgl.
    @}
 @end example
 @noindent
-Note the use of @code{rgl::} as these objects would not necessarily be
-visible (and if they are, need not be the ones from that namespace:
+Note the use of @code{rgl::} as that object would not necessarily be
+visible (and if it is, it need not be the one from that namespace:
 @code{plot3d} occurs in several other packages).  If the intention is to
 give an error if the suggested package is not available, simply use
 e.g.@: @code{rgl::plot3d}.
@@ -11073,9 +11073,15 @@ by @R{}'s internal allocation mechanism.  These will only come into play
 on 64-bit systems, where the limit for @var{n} prior to @R{} 3.0.0 was
 just under 16Gb.
 
-The memory returned is only guaranteed to be aligned as required for
-@code{double} pointers: take precautions if casting to a pointer which
-needs more (e.g.@: @code{(long double *)} on some platforms).
+Prior to @R{} 3.2.0 the memory returned was only guaranteed to be
+aligned as required for @code{double} pointers: take precautions if
+casting to a pointer which needs more (e.g.@: @code{(long double *)} on
+some platforms).  Currently alignment for @code{long double *} (if used
+on the platform) and @code{double complex} is guaranteed: however what
+this is platform-specific (it could be 4, 8 or 16 bytes, or with no
+alignment constraint: e.g.@: @cputype{x86} Linux is 4 and
+@cputype{x64_84} Linux is 16, even though the @code{long double} type is
+the same 80-bit IEC60559 type).
 
 These functions should only be used in code called by @code{.C} etc,
 never from front-ends.  They are not thread-safe.
