@@ -150,7 +150,7 @@
       \command{R CMD check} gains \option{--run-dontrun} and
       \option{--run-donttest} options.
       
-      \command{R CMD check} now reports empty \code{importFrom}
+      \item \command{R CMD check} now reports empty \code{importFrom}
       declarations in a \file{NAMESPACE} file, as these are common
       errors (writing \code{importFrom(Pkg)} where \code{import(Pkg)}
       was intended).
@@ -171,6 +171,11 @@
       \item Entry points \code{rbinom_mu}, \code{rnbinom_mu} and
       \code{rmultinom} are remapped (by default).  This requires
       packages using them to be re-installed.
+      
+      \item The alignment of memory allocated by \code{R_alloc} is now
+      guaranteed to be sufficient for C types \code{double complex} and
+      \code{long double}.  Packages using \code{USE_RINTERNALS} may need
+      to be re-installed on some platforms.
     }
   }
 
@@ -263,7 +268,10 @@
       
       \item \code{edit()} (and hence \code{fix()}) failed if 
       an object had a non-character attribute named \code{"source"}
-      (an attribute that had been used in \R prior to version 2.14.0).
+      (an attribute that had been used in \R prior to version 2.15.0).
+
+      \item \code{callGeneric()} could fail if the generic had
+        \code{\dots} as a formal argument. (\PR{15937}).
     }
   }
 }
